--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,9 +1,17 @@
+.h3{
+  color: red;
+  padding-bottom: 80px;
+  font-size: 80px;
+  margin-top: -40px;
+}
+
+
 #logreg-forms {
     width: 412px;
     margin: 10vh auto;
-    background-color: #f3f3f3;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    background-color: #585858;
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    color : white;
   }
   #logreg-forms form {
     width: 100%;
@@ -17,7 +25,9 @@
     height: auto;
     padding: 10px;
     font-size: 16px;
+  
   }
+
   #logreg-forms .form-control:focus {
     z-index: 2;
   }
@@ -36,11 +46,25 @@
     margin: 0 auto;
     margin-bottom: 14px;
   }
+ 
   #logreg-forms .social-btn {
-    font-weight: 100;
-    color: white;
-    width: 190px;
-    font-size: 0.9rem;
+    align-items: center;
+    background-color: white;
+    border-radius: 50px;
+    display: flex;
+    height: 60px;
+    min-width: 300px;
+    padding: 7px 66px;
+    margin-bottom: 20px;
+  }
+
+  .socialText{
+    height: 29px;
+    letter-spacing: 0;
+    text-align: center;
+    font-size: 19px;
+    width: 260px;
+    color: #848484;
   }
   
   #logreg-forms a {
@@ -49,6 +73,22 @@
     color: lightseagreen;
   }
   
+  .logo{
+    
+    height: 40px;
+    padding-left: -10px;
+    padding-bottom: 3px;
+  }
+  .fa-facebook-f{
+    color: rgb(50, 50, 240);
+    /* margin-right: 10px; */
+    padding-right: 7px;
+  }
+  .fb_logo{
+    height: 50px;
+    padding-left: -10px;
+    padding-bottom: 0px;
+  }
   #logreg-form .lines {
     width: 200px;
     border: 1px solid red;
@@ -59,20 +99,42 @@
   }
   
   #logreg-forms .facebook-btn {
-    background-color: #3c589c;
+    background-color: white;
   }
   
   #logreg-forms .google-btn {
-    background-color: #df4b3b;
+    background-color: white;
     margin-right: 5px;
   }
   
+  .btn-secondary{
+    
+    background-color: red;
+    border-radius: 50px;
+    display: flex;
+    height: 50px;
+    min-width: 80px;
+    padding: 7px 46px;
+    margin-bottom: 20px;
+    
+    align-items: center;
+    margin: auto;
+  }
+
   #logreg-forms .form-signup .social-btn {
     width: 210px;
   }
   
-  #logreg-forms .form-signup input {
-    margin-bottom: 2px;
+  #logreg-forms .form-signup  {
+    margin-bottom: 3px;
+  }
+
+  input{
+    margin-bottom: 10px;
+  }
+  .btn-primary{
+    border-radius: 50px;
+    padding: 10px 30px;
   }
   
   .form-signup .social-login {
